--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@shopify/react-native-skia": "^1.4.2",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-svg": "^13.14.0",
+    "react-native-vector-icons": "^10.2.0",
+    "victory-native": "^36.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
