--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@shopify/react-native-skia": "^1.4.2",
+    "axios": "^1.7.7",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.2.0",
     "victory-native": "^36.3.1"
